--- a/Buoi1/buoi1_git.html
+++ b/Buoi1/buoi1_git.html
@@ -9,6 +9,18 @@
 <body>
    <h1>alo</h1> 
    <h1>sdfsdfsdfd</h1>
+   <h1> anh gi vào đây nhé</h1>
+   <p>
+    trỏ vào file, chọn open recent
+    sau đó chọn cái folder em muốn làm việc là ok.
+   </p>
+   <p>
+    bài tập: lưu file này lại, rồi đẩy lên git
+    sau đó sang cái thứ mục của em thay đổi vài cái thẻ h, p rồi đẩy lên git.
+    sau đó gửi link git cho anh để anh kiểm tra
+    mắc ở đâu thì em nhắn cho anh.
+     
+   </p>
    
 </body>
 </html>
