--- a/Buoi1/buoi1_git.html
+++ b/Buoi1/buoi1_git.html
@@ -36,6 +36,14 @@
     xong git push ạ
     em để ý có cái chứ conflict: cái này là code của em và code trên mạng đang có sự xung đột
    </p>
+   <p>
+    rồi, sanh sửa confilct cho em rồi đó. em dùng lại cái số 1 đi
+   thế là  dc chưa anh ơi
+   đúng r đấy. giỏi lên r đấy
+   làm lại lần nữa, anh vừa sửa code xong này
+   làm lại bước 1 ạ 
+   ờ
+   </p>
    
 </body>
 </html>
