--- a/Buoi6/buoi6.html
+++ b/Buoi6/buoi6.html
@@ -12,7 +12,7 @@
         <div class="conduit">Conduit</div>
         <div class="sign">
             <ul class="ul">
-            <li><a href="">Home</a></li>
+            <li><a href="http://127.0.0.1:5500/Buoi6/home.html">Home</a></li>
             <li><a href="http://127.0.0.1:5500/Buoi6/buoi6.html">Sign in</a></li>
             <li><a href="http://127.0.0.1:5500/Buoi6/buoi6signup.html">Sign up</a></li>
             </ul>
